--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -5,16 +5,16 @@ div.container.barra {
     top: 0;
 
     a {
-        transition: all 1s;
+        transition: all 0.5s;
+        &:hover {
+            background-color: rgba(98, 94, 94, 0.615);
+            border: 2px solid white;
+            border-radius: 5px;
+            transform: scale(1.02);
+        }
     }
 
-    // HOOVER
-    a:hover {
-        background-color: rgba(98, 94, 94, 0.615);
-        border: 2px solid white;
-        border-radius: 5px;
-        transform: scale(1.08);
-    }
+    
 
     form.d-flex {
         flex-direction: row;
